# satlight

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/satlight/: __init__.py  assets.py  config.py  main.py
src/satlight/projection_modes/: __init__.py  ceiling.py  full_sky.py  stereographic.py
src/satlight/satellite_classifiers/: __init__.py  iss.py  other.py  starlink.py
src/satlight/services/: __init__.py  catalog.py  cities.py  groundgrid.py  observer.py  propagation.py  streamer.py  sun.py
src/satlight/static/: index.html
src/satlight/static/assets/geo/: cities.json
src/satlight/static/css/: lcars.css
src/satlight/static/js/: canvas.js  hud.js  interaction.js  main.js  overlay.js  registry.js  settings.js  state.js  teleportMap.js  websocket.js
src/satlight/static/js/effects/: orbitTrackEffect.js  shadowFadeEffect.js  trailEffect.js
src/satlight/static/js/projection_modes/: ceiling.js  full_sky.js  stereographic.js
src/satlight/static/js/renderers/: defaultRenderer.js  issRenderer.js  starlinkRenderer.js
src/satlight/static/js/themes/: kawaiiLcars.js
tests/: conftest.py  helpers.py  test_assets.py  test_catalog.py  test_cities.py  test_classifiers.py  test_groundgrid.py  test_observer.py  test_propagation.py  test_sun.py
tools/: analyze.py  fetch_cities.py  fetch_world_geojson.py  pin_deps.py
