[build-system]
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "satlight"
version = "0.1.0"
description = "Real-time local satellite ceiling projection using FastAPI and Skyfield"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "SatLight" }]
dependencies = [
    "fastapi==0.115.14",
    "httpx==0.28.1",
    "numpy==2.3.0",
    "python-dotenv==1.1.1",
    "skyfield==1.53",
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
    "hatch==1.16.5",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "respx==0.23.1",
    "ruff==0.15.12",
    "tomlkit==0.12.5",
]

[project.scripts]
satlight = "satlight.main:run"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"satlight" = ["static/**/*"]

[tool.uv]
exclude-newer = "7 days"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]
ignore = [
    "E501",
    "W293",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "tests"]
testpaths = ["tests"]
